--- a/charts/songs/index.html
+++ b/charts/songs/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
     <head>
         <!--Page Info-->
-        <title>Music Charts | AudHub</title>
+        <title>Top Songs | AudHub</title>
         <meta charset="utf-8">
         <meta name="Author" content="Winner Edwin">
         <meta name="Keywords" content="Charts, Upcoming, Artist, Streaming, Downloads">
@@ -42,13 +42,7 @@
         <!--Navbar-->
         <navbar></navbar>
         <!--Display-->
-        <display>
-            <div>
-                <p>Music Charts</p>
-            </div>
-            <p class="category">Top Songs</p>
-            <div class="list charts"></div>
-        </display>
+        <display></display>
         <!--Controls-->
         <controls></controls>
         <!--Scripts-->
