--- a/explore/index.html
+++ b/explore/index.html
@@ -42,10 +42,7 @@
         <!--Navbar-->
         <navbar></navbar>
         <!--Display-->
-        <display>
-            <p class="category">My Music</p>
-            <div class="list charts"></div>
-        </display>
+        <display></display>
         <!--Controls-->
         <controls></controls>
         <!--Info-->
