--- a/playlists/ymal/index.html
+++ b/playlists/ymal/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
     <head>
         <!--Page Info-->
-        <title>Trending | AudHub</title>
+        <title>Playlists | AudHub</title>
         <meta charset="utf-8">
         <meta name="Author" content="Winner Edwin">
         <meta name="Keywords" content="Charts, Upcoming, Artist, Streaming, Downloads">
