--- a/about/index.html
+++ b/about/index.html
@@ -1,54 +1,1 @@
-<!doctype html>
-<html lang="en-us">
-    <head>
-        <!--Page Info-->
-        <title>About Us</title>
-        <meta charset="utf-8">
-        <meta name="Author" content="Winner Edwin">
-        <meta name="Keywords" content="Charts, Upcoming, Artist, Streaming, Downloads">
-        <meta name="Description" content="Stream and Download songs from your favorite Upcoming artists">
-
-        <!--Meta Controls-->
-        <meta name="robots" content="follow">
-        <meta http-equiv="cache-control" content="max-age=0" />
-        <meta http-equiv="cache-control" content="no-cache" />
-        <meta http-equiv="expires" content="0" />
-        <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
-        <meta http-equiv="pragma" content="no-cache" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-        <!--Social Control-->
-        <meta property="og:url" content="https://audhub.vercel.io">
-        <meta property="og:image" content="/favicon.png">
-        <meta property="og:title" content="About Us">
-        <meta property="og:description" content="Stream and Download songs from your favorite Upcoming artists">
-
-        <!--External Files-->
-        <link rel="icon" href="/favicon.png">
-        <link rel="stylesheet" href="/css/google-font.css">
-        <link rel="stylesheet" href="/all.css">
-        <link rel="stylesheet" href="/small.css">
-        <link rel="stylesheet" href="/big.css">
-        <link rel="stylesheet" href="/css/listen.css">
-
-        <!--Frameworks-->
-        <script src="/js/babel.min.js"></script>    
-        <script src="/js/react.production.min.js"></script>
-        <script src="/js/react-dom.production.min.js"></script>
-        <script src="/js/idb.js" type="module"></script>
-        <style>@media only screen and (orientation: portrait){th,td {width: initial !important}}</style>
-    </head>
-    <body>
-        <!--Top Panel-->
-        <panel></panel>
-        <!--Navbar-->
-        <navbar></navbar>
-        <!--Display-->
-        <display></display>
-        <!--Controls-->
-        <controls></controls>
-        <!--Scripts-->
-        <script src="/js/controls.js" type="text/babel"></script>
-        <script src="/js/about.js" type="text/babel"></script>
-    </body>
-</html>
+<!doctype html> <html lang="en-us"> <head> <title>About Us</title> <meta charset="utf-8"> <meta name="Author" content="Winner Edwin"> <meta name="Keywords" content="Charts, Upcoming, Artist, Streaming, Downloads"> <meta name="Description" content="Stream and Download songs from your favorite Upcoming artists"> <meta name="robots" content="follow"> <meta http-equiv="cache-control" content="max-age=0" /> <meta http-equiv="cache-control" content="no-cache" /> <meta http-equiv="expires" content="0" /> <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" /> <meta http-equiv="pragma" content="no-cache" /> <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> <meta property="og:url" content="https://audhub.vercel.io"> <meta property="og:image" content="/favicon.png"> <meta property="og:title" content="About Us"> <meta property="og:description" content="Stream and Download songs from your favorite Upcoming artists"> <link rel="icon" href="/favicon.png"> <link rel="stylesheet" href="/css/google-font.css"> <link rel="stylesheet" href="/all.css"> <link rel="stylesheet" href="/small.css"> <link rel="stylesheet" href="/big.css"> <link rel="stylesheet" href="/css/listen.css"> <script src="/js/babel.min.js"></script> <script src="/js/react.production.min.js"></script> <script src="/js/react-dom.production.min.js"></script> <script src="/js/idb.js" type="module"></script> <link rel="stylesheet" href="data:text/css;base64,QG1lZGlhIG9ubHkgc2NyZWVuIGFuZCAob3JpZW50YXRpb246IHBvcnRyYWl0KXt0aCx0ZCB7d2lkdGg6IGluaXRpYWwgIWltcG9ydGFudH19"> </head> <body> <panel></panel> <navbar></navbar> <display></display> <controls></controls> <script src="/js/controls.js" type="text/babel"></script> <script src="/js/about.js" type="text/babel"></script> </body> </html>
