--- a/myaccount/stats/index.html
+++ b/myaccount/stats/index.html
@@ -35,65 +35,7 @@
         <script src="/js/react.production.min.js"></script>
         <script src="/js/react-dom.production.min.js"></script>
         <script src="/js/idb.js" type="module"></script>
-        <style>
-            div.stat>div {
-                display: flex;
-                align-items: center;
-                margin-bottom: 1%;
-                padding: 1%;
-                background-color: #0c0c0c;
-            }
-            div.stat>div>div{
-                width: calc(100% - (2.5em + 2%));
-                padding: 0 1% 0 1%;
-                height: 2.5em;
-            }
-            div.stat img {
-                height: 2.5em;
-                width: 2.5em;
-            }
-            div.stat>div>div>* {
-                display: block;
-                width: 100%;
-                height: 50%;
-            }
-            div.stat span {
-                font-family: circula !important;
-            }
-            div.stat i {
-                float: right;
-            }
-            div.stat progress {
-                height: 7px;
-                background-color: #222;
-                border-radius: 0;
-                border: none;
-                outline: none;
-                appearance: none;
-            }
-            div.stat progress::-webkit-progress-value {
-                appearance: none;
-                background-image: var(--old-gradient);
-            }
-            div.stat progress::-moz-progress-bar {
-                appearance: none;
-                background-image: var(--old-gradient);
-            }
-            p.category select {
-                float: right;
-                width: inherit;
-                margin-left: auto;
-                border-radius: 10px;
-                box-sizing: border-box;
-                color: white;
-                padding: 1% 2% 1% 2%;
-                background-color: #222;
-                font-size: medium;
-                font-family: ui;
-                border: transparent 2px solid;
-                /* display: inline-block */
-            }
-        </style>
+        <link rel="stylesheet" href="/css/myacct-stats.css">
     </head>
     <body>
         <!--Top Panel-->
