--- a/queue/index.html
+++ b/queue/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
     <head>
         <!--Page Info-->
-        <title>Queue | AudHub</title>
+        <title>Now Playing</title>
         <meta charset="utf-8">
         <meta name="Author" content="Winner Edwin">
         <meta name="Keywords" content="Charts, Upcoming, Artist, Streaming, Downloads">
@@ -20,7 +20,7 @@
         <!--Social Control-->
         <meta property="og:url" content="https://audhub.vercel.io">
         <meta property="og:image" content="/favicon.png">
-        <meta property="og:title" content="Queue | AudHub">
+        <meta property="og:title" content="Now Playing">
         <meta property="og:description" content="Stream and Download songs from your favorite Upcoming artists">
 
         <!--External Files-->
