--- a/signup/index.html
+++ b/signup/index.html
@@ -113,7 +113,7 @@
         <footer>
             <div class="left">
                 <a href="/about">About</a>
-                <a href="/privacy-policy">Privacy Policy</a>
+                <a href="/login">Login</a>
                 <a href="/terms-of-use">Terms Of Use</a>
             </div>
             <div class="right">
