--- a/test.html
+++ b/test.html
@@ -9,8 +9,10 @@
     <input type="file" accept="*"/>
     <button type="submit">Upload</button>
     <script type="module">
-      await import("https://www.gstatic.com/firebasejs/9.17.1/firebase-storage.js").then(resp => window.storage = resp);
-      await import("https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js").then(resp => window.database = resp);
+      const config = {apiKey: "AIzaSyCkdtvsuS79NzK8QIRNJoleTBK8YgU8AUM",authDomain: "audhub-db.firebaseapp.com",databaseURL: "https://audhub-db-default-rtdb.firebaseio.com",projectId: "audhub-db",storageBucket: "audhub-db.appspot.com",messagingSenderId: "1001437617026",appId: "1:1001437617026:web:0d9c11299aeac9a70dcd9b",measurementId: "G-7JM1160W8E"};
+      window.app = (await import("https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js")).initializeApp(config)
+      window.storage = await import("https://www.gstatic.com/firebasejs/9.17.1/firebase-storage.js")
+      window.database = await import("https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js")
       </script>
       <script>
           String.prototype.toArray = function(){return [Number(this)]}
